# anki-compendium

./: AUTHENTICATION_IMPLEMENTATION.md  BACKEND_IMPLEMENTATION_COMPLETE.md  N8N_MIGRATION_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_COMPLETION_REPORT.md  README.md  TESTING_SESSION_SUMMARY.md
backend/: .env.example  .gitignore  .gitkeep  ALEMBIC_SETUP_COMPLETE.md  API_QUICK_START.md  AUTHENTICATION.md  AUTH_QUICK_START.md  BUGFIX_GUIDE.md  CELERY_IMPLEMENTATION_SUMMARY.md  CELERY_WORKER.md  CHANGELOG.md  DASHBOARD_PROFILE_API_IMPLEMENTATION.md  DASHBOARD_PROFILE_API_QUICK_START.md  GEMINI_API_CONFIGURATION_SUMMARY.md  GEMINI_API_SETUP.md  INITIALIZATION_SUMMARY.md  MIGRATIONS.md  RAG_PIPELINE_TEST_REPORT.md  RAG_PROMPT_FIX_SUMMARY.md  README.md  STARTUP_RELIABILITY.md  TEST_REPORT_UPLOAD_E2E.md  UPLOAD_IMPLEMENTATION.md  alembic.ini  pyproject.toml  real_api_test.sh  requirements-dev.txt  requirements.txt  run_worker.py  test_report_e2e.sh  validate_api_config.py
backend/alembic/: README  env.py
backend/alembic/versions/: 20251123_0141_ea82ac9c6d47_initial_schema_manual.py  20251123_add_user_preferences_field.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: logging.py  middleware.py  security.py  validators.py
backend/app/models/: __init__.py  audit_log.py  deck.py  job.py  notification.py  setting.py  subscription.py  user.py
backend/app/rag/: chunking.py  embeddings.py  loaders.py  pipeline.py  vectorstore.py
backend/app/rag/anki/: __init__.py  card_generator.py
backend/app/rag/chains/: __init__.py  question_answering.py  question_generation.py  tag_generation.py  topic_extraction.py  topic_refinement.py
backend/app/rag/prompts/: question_answering.py  question_generation.py  (+3 more)
backend/app/schemas/: __init__.py  auth.py  common.py  dashboard.py  deck.py  health.py  job.py  user.py
backend/app/services/: __init__.py  auth_service.py  dashboard_service.py  deck_service.py  job_service.py  storage_service.py  user_service.py
backend/app/workers/: __init__.py  tasks.py
backend/tests/: conftest.py  test_main.py  test_rag_pipeline_e2e.py
backend/tests/api/: test_auth.py  test_health.py  test_upload.py  test_upload_e2e.py
backend/tests/workers/: test_pdf_processor.py
(+128 files in other folders)
